# swagger/spring-server/src/main/java/ch/heig/amt/gamification/repositories/PointScaleRepository.java
@@ -1,5 +1,6 @@
 package ch.heig.amt.gamification.repositories;
 
+import ch.heig.amt.gamification.api.endpoints.EventsApiController;
 import ch.heig.amt.gamification.entities.PointScaleEntity;
 import org.springframework.data.repository.PagingAndSortingRepository;
 import org.springframework.data.repository.query.Param;
@@ -11,4 +12,8 @@ import java.util.List;
  */
 public interface PointScaleRepository extends PagingAndSortingRepository<PointScaleEntity, Integer>{
 
+    // to change : save,findOne, delete, findAll
+    PointScaleEntity findByPointScaleIdAndApplicationApplicationName(int id, String apiKey);
+    List<PointScaleEntity> findAllByApplicationApplicationName(String apiKey);
+    void deletePointScaleEntityByPointScaleIdAndApplicationApplicationName(Integer id, String apiKey);
 }
